# snippets2changelog

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .yamllint  LICENSE.txt  README.md  changelog.md  pyproject.toml
.github/workflows/: release.yml  test-release.yaml  test.yml  unittest.yaml
.snippets/: 11.md  14.md  16.md  18.md  21.md  23.md  25.md  27.md  29.md  3.md  31.md  33.md  35.md  5.md  6.md  7.md  9.md
example_snippets/: 1234.md
snippets2changelog/: cli.py  collector.py  common.py  creator.py  parser.py  version.py
snippets2changelog/templates/: changelog.md.template  changelog_part.md.template  snippet.md.template
tests/: test_common.py
